# tauri-ai-text-styler

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: google_gemini.rs  main.rs
